// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards headings Check Headings 1`] = `
{
  "h1": {
    "bottom-gap-general": 20,
    "bottom-gap-unit-general": "px",
    "bottom-gap-unit-xl": "px",
    "bottom-gap-xl": 20,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-unit-general": "px",
    "font-size-unit-l": "px",
    "font-size-unit-m": "px",
    "font-size-unit-s": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xs": "px",
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-style-xl": "italic",
    "font-weight-general": "300",
    "font-weight-xl": "300",
    "letter-spacing-general": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-unit-general": "px",
    "line-height-unit-l": "px",
    "line-height-unit-m": "px",
    "line-height-unit-s": "px",
    "line-height-unit-xl": "px",
    "line-height-unit-xs": "px",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-decoration-xl": "overline",
    "text-indent-general": 44,
    "text-indent-unit-general": "px",
    "text-indent-unit-xl": "px",
    "text-indent-xl": 44,
    "text-transform-general": "capitalize",
    "text-transform-xl": "capitalize",
    "white-space-general": "pre",
    "white-space-xl": "pre",
    "word-spacing-general": 10,
    "word-spacing-unit-general": "px",
    "word-spacing-unit-xl": "px",
    "word-spacing-xl": 10,
  },
}
`;

exports[`StyleCards headings Works on responsive 1`] = `
{
  "h1": {
    "bottom-gap-general": 20,
    "bottom-gap-m": 10,
    "bottom-gap-unit-general": "px",
    "bottom-gap-unit-m": "px",
    "bottom-gap-unit-xl": "px",
    "bottom-gap-xl": 20,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-m": 10,
    "font-size-unit-general": "px",
    "font-size-unit-l": "px",
    "font-size-unit-s": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xs": "px",
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-style-m": "oblique",
    "font-style-xl": "italic",
    "font-weight-general": "300",
    "font-weight-m": "400",
    "font-weight-xl": "300",
    "letter-spacing-general": 5,
    "letter-spacing-m": 15,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-m": 20,
    "line-height-unit-general": "px",
    "line-height-unit-l": "px",
    "line-height-unit-s": "px",
    "line-height-unit-xl": "px",
    "line-height-unit-xs": "px",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-decoration-m": "underline",
    "text-decoration-xl": "overline",
    "text-indent-general": 44,
    "text-indent-m": 22,
    "text-indent-unit-general": "px",
    "text-indent-unit-m": "px",
    "text-indent-unit-xl": "px",
    "text-indent-xl": 44,
    "text-transform-general": "capitalize",
    "text-transform-m": "uppercase",
    "text-transform-xl": "capitalize",
    "white-space-general": "pre",
    "white-space-m": "pre-wrap",
    "white-space-xl": "pre",
    "word-spacing-general": 10,
    "word-spacing-m": 20,
    "word-spacing-unit-general": "px",
    "word-spacing-unit-m": "px",
    "word-spacing-unit-xl": "px",
    "word-spacing-xl": 10,
  },
}
`;
